tests/errors/13_wrong_arg_count.f
      PROGRAM WRONG_ARG_COUNT
      CALL S()
      END
      SUBROUTINE S(A)
      INTEGER A
      CONTINUE
      END
